# c03

./: .gitignore  LICENSE  NOTES.md  README.adoc  README.md  c-cpp-vectorization.md  conf.py  demo.py  embbeded.md  main.cpp  micropython.md  proglang--cpp--ALL-PREBRAT.md  proglang--cpp--basics--compilation-and-linking.md  proglang--cpp--basics--struct-and-class.md  proglang--cpp--interm--generics-and-templates.md  proglang--cpp--libboost-compilation-on-windows.md  proglang--cpp--quickstart.md  proglang--cpp--tips-tricks.md  proglang--cpp--tools-for-unit-testing.md  std-algorithms.md  std-concepts.md  std-modules.md  test_failure.cpp
00-c-legacy/: 99_old_syntax.c  Excercism.rst  Untitled-1.md  isogram  isogram.c  isogram2.c
01-basics/code/: demo.cpp
02-numbers/: 01-numbers.cpp
07-containers/: ex_container_fill.cpp
07-generics-aka-templates/: ex_generic_type.cpp  ex_template-class-and-inheritance.cpp
08-filesystem/: filesystem.cpp
09-concepts-and-traits/: concepts.cpp
11-concurrency-and-parallelism-vectorisation/: ex_sse.cpp  parallel.cpp
12-cmake-and-ctest/: CMakeLists.txt  PROJECTS.md  README2.adoc
12-cmake-and-ctest/01-basic/A-hello-cmake/: ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj.filters  hello_cmake.sln  hello_cmake.vcxproj.filters
12-cmake-and-ctest/01-basic/A-hello-cmake/hello_cmake.dir/Debug/: hello_cmake.ilk
12-cmake-and-ctest/01-basic/A-hello-cmake/hello_cmake.dir/Debug/hello_cmake.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  link.write.1.tlog
12-cmake-and-ctest/01-basic/A-hello-cmake/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
12-cmake-and-ctest/01-basic/A-hello-cmake/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  (+1 more)
12-cmake-and-ctest/03_staticlibrary/src/: core.cpp
12-cmake-and-ctest/04_sharedlibrary/: CMakeLists.txt
12-cmake-and-ctest/CMake-Eigen-Cpp/: CMakeLists.txt  Ising2D.hpp  main.cpp
12-cmake-and-ctest/cmake-Qt-widget/: CMakeLists.txt  mainwindow.cpp
12-cmake-and-ctest/cmake-cpp20/: CMakeLists.txt
12-cmake-and-ctest/cmake-d3d12-01/: CMakeLists.txt  main.cpp
12-cmake-and-ctest/cmake-example-project/: README.md
12-cmake-and-ctest/cmake-example-project/myLib/include/: library.h
12-cmake-and-ctest/cmake-example-project/myLib/src/: library.c
12-cmake-and-ctest/cmake-example-project/myLibTest/: minunit.h
12-cmake-and-ctest/cmake-library-header-only/include/simple/: simple.h
12-cmake-and-ctest/cmake-library-shared/: CMakeLists.txt
12-cmake-and-ctest/cmake-library-shared/include/hello/: Hello.hpp
12-cmake-and-ctest/cmake-library-static/: CMakeLists.txt
12-cmake-and-ctest/cmake-template-01/test/: test_project.cpp
12-cmake-and-ctest/gmake-template-01/: lib1.c  lib2.c  test.c
12-cmake-and-ctest/meson-template-01/: main.c
99-windows-api/: CMakeLists.txt  window.cpp
C99-overview/: 02_primitives.c  03_structures.c  99_new_syntax.c  README.md
C99-overview/liblinalg/: CMakeLists.txt  README.md  linalg.c  linalg.h
C99-overview/liblinalg/src/: demo.c  linalg.c  linalg.h
arduino/diode-lights/: 01_analog_read_A0.ino  01_diode_lights.ino  fade_led.ino
arduino/display-16x2/: display_16x2.ino
arduino/sd-card/: card_SD.ino
arduino/sensor-dh11/: sensor_DH11.ino
arduino/sensor-lm335/: sensor_LM335.ino
cmake-templates/01_flatstructure/: main.cpp
cmake-templates/02_subdirectories/: CMakeLists.txt
cmake-templates/03_staticlibrary/: CMakeLists.txt
cmake-templates/03_staticlibrary/src/: main.cpp
cmake-templates/cmake_demo_01/: CMakeLists.txt  cmake-build.bat
cpp-debug-vscode/: CMakeLists.txt  simple_lib.cpp
daily_cpp/: sorted_arrays_median.cpp
result-type-c/: result.c  result.h
review/: CMakeLists.txt  basics--project-structure.md  basics--rvalue-and-lvalue.md  ex_equal.cpp  interm--project-managament-with-cmake.md  libqt5-compilation-on-windows.md  prog--lang--cpp--notes-01.md  proglang--cpp--basics--dynamic-array-allocation.md  proglang--cpp--basics--pointers.md  proglang--cpp--basics--project-structure.md  proglang--cpp--basics--rvalue-and-lvalue.md  test_success.cpp
source/: code-format.sh  conf.py  index.md  index.rst
source/00-c-legacy/: armstrong_numbers  armstrong_numbers.c
source/01-basics/: index.rst
source/10-pointers-and-references/: pointers.c
source/12-cmake-and-ctest/: custom.clang-format
source/12-cmake-and-ctest/01-basic/A-hello-cmake/: ALL_BUILD.vcxproj
source/12-cmake-and-ctest/01-basic/A-hello-cmake/hello_cmake.dir/Debug/: hello_cmake.exe.recipe
source/12-cmake-and-ctest/01_flatstructure/: CMakeLists.txt
source/12-cmake-and-ctest/02_subdirectories/src/: core.cpp
source/12-cmake-and-ctest/03_staticlibrary/include/core/: core.hpp
source/12-cmake-and-ctest/04_sharedlibrary/include/core/: core.hpp
source/12-cmake-and-ctest/cmake-example-project/myApp/: CMakeLists.txt  main.c
source/12-cmake-and-ctest/cmake-example-project/myLibTest/: CMakeLists.txt
source/12-cmake-and-ctest/cmake-math-eigen/: CMakeLists.txt
source/12-cmake-and-ctest/cmake-template-01/: CMakeLists.txt
source/12-cmake-and-ctest/cmake_demo_01/: cmake-generate.bat
source/12-cmake-and-ctest/gmake-template-01/: lib1.h  main.c
source/99-windows-api/: README.md
source/cmake/: CMake Guide.adoc  index.md
source/cmake/01-basic/A-hello-cmake/: ZERO_CHECK.vcxproj  hello_cmake.vcxproj
source/cmake/01_flatstructure/: CMakeLists.txt
source/cmake/02_subdirectories/src/: main.cpp
source/cmake/cmake-Qt-widget/: mainwindow.h
source/cmake/cmake-Qt-widgets-2/: CMakeLists.txt
source/cmake/cmake-cpp20/: hello.cpp
source/cmake/cmake-example-project/myLibTest/: main.c
source/cmake/cmake-library-header-only/: CMakeLists.txt
source/cmake/cmake-library-shared/src/: Hello.cpp
source/cmake/cmake-library-static/src/: Main.cpp
source/cmake/cmake-template-01/include/project01/: project.hpp
source/cmake/cmake_demo_01/: example.cpp
source/cmake/gmake-template-01/: main
source/cpp-debug-vscode/: simple_lib.h  simple_main.cpp
source/daily_cpp/: initializer-list.md
source/review/: basics--pointers.md  cpp--notes-01.md  fp-monoid.md  types-and-virtual-methods.md
(+9 files in other folders)
